Adding MYSQL_DB_INIT var for db initialization

--- a/sample.env
+++ b/sample.env
@@ -4,7 +4,7 @@
 # To determine the name of your containers
 COMPOSE_PROJECT_NAME=moad
 
-# Possible values: php54, php56, php71, php72, php73, php74, php8
+# Possible values: php8
 PHPVERSION=php8
 DOCUMENT_ROOT=./www
 APACHE_DOCUMENT_ROOT=/var/www/html
@@ -16,6 +16,7 @@ PHP_INI=./config/php/php.ini
 DATABASE=mysql8
 MYSQL_DATA_DIR=./data/mysql
 MYSQL_LOG_DIR=./logs/mysql
+MYSQL_DB_INIT=./provision/mysql/init/01-databases.sql
 
 # If you already have the port 80 in use, you can change it (for example if you have Apache)
 HOST_MACHINE_UNSECURE_HOST_PORT=80
